Add SecureAction entity & JsonAPI controller
