# collections/swagger.yaml
@@ -918,6 +918,280 @@ paths:
                     properties:
                       user:
                         $ref: '#/definitions/User_relation'
+  /secure/actions/:
+    get:
+      tags:
+        - secure_actions
+      summary: 'SecureAction List'
+      operationId: listSecureAction
+      produces:
+        - application/json
+      parameters: {  }
+      responses:
+        200:
+          description: 'successful operation'
+          schema:
+            type: object
+            properties:
+              jsonapi:
+                type: object
+                properties:
+                  version:
+                    type: string
+                    example: '1.0'
+              links:
+                type: object
+                properties:
+                  self:
+                    type: string
+                    example: '/secure/actions?page[number]=1&page[size]=100'
+                  first:
+                    type: string
+                    example: '/secure/actions?page[number]=1&page[size]=100'
+                  last:
+                    type: string
+                    example: '/secure/actions?page[number]=1&page[size]=100'
+                  prev:
+                    type: string
+                    example: 'null'
+                  next:
+                    type: string
+                    example: 'null'
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      format: int64
+                      example: 12
+                    type:
+                      type: string
+                      example: secure_actions
+                    attributes:
+                      $ref: '#/definitions/SecureAction'
+                    relationships:
+                      properties: {  }
+    post:
+      tags:
+        - secure_actions
+      summary: 'Add SecureAction'
+      operationId: addSecureAction
+      produces:
+        - application/json
+      parameters:
+        -
+          in: body
+          name: body
+          description: addSecureAction
+          required: true
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                properties:
+                  type:
+                    type: string
+                    example: secure_actions
+                  attributes:
+                    $ref: '#/definitions/SecureAction'
+                  relationships:
+                    properties: {  }
+      responses:
+        200:
+          description: 'successful operation'
+          schema:
+            type: object
+            properties:
+              jsonapi:
+                type: object
+                properties:
+                  version:
+                    type: string
+                    example: '1.0'
+              links:
+                type: object
+                properties:
+                  self:
+                    type: string
+                    example: /secure/actions
+              data:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                    example: 12
+                  type:
+                    type: string
+                    example: secure_actions
+                  attributes:
+                    $ref: '#/definitions/SecureAction'
+                  relationships:
+                    properties: {  }
+  '/secure/actions/{SecureAction_id}':
+    patch:
+      tags:
+        - secure_actions
+      summary: 'Edit SecureAction'
+      operationId: editSecureAction
+      produces:
+        - application/json
+      parameters:
+        -
+          in: body
+          name: body
+          description: editSecureAction
+          required: true
+          schema:
+            type: object
+            properties:
+              data:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                    example: 12
+                  type:
+                    type: string
+                    example: secure_actions
+                  attributes:
+                    $ref: '#/definitions/SecureAction'
+                  relationships:
+                    properties: {  }
+        -
+          name: SecureAction_id
+          in: path
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: 'successful operation'
+          schema:
+            type: object
+            properties:
+              jsonapi:
+                type: object
+                properties:
+                  version:
+                    type: string
+                    example: '1.0'
+              links:
+                type: object
+                properties:
+                  self:
+                    type: string
+                    example: /secure/actions
+              data:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                    example: 12
+                  type:
+                    type: string
+                    example: secure_actions
+                  attributes:
+                    $ref: '#/definitions/SecureAction'
+                  relationships:
+                    properties: {  }
+    delete:
+      tags:
+        - secure_actions
+      summary: 'Delete SecureAction'
+      operationId: deleteSecureAction
+      produces:
+        - application/json
+      parameters:
+        -
+          name: SecureAction_id
+          in: path
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: 'successful operation'
+          schema:
+            type: object
+            properties:
+              jsonapi:
+                type: object
+                properties:
+                  version:
+                    type: string
+                    example: '1.0'
+              links:
+                type: object
+                properties:
+                  self:
+                    type: string
+                    example: /secure/actions
+              data:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                    example: 12
+                  type:
+                    type: string
+                    example: secure_actions
+                  attributes:
+                    $ref: '#/definitions/SecureAction'
+                  relationships:
+                    properties: {  }
+    get:
+      tags:
+        - secure_actions
+      summary: 'Get SecureAction'
+      operationId: viewSecureAction
+      produces:
+        - application/json
+      parameters:
+        -
+          name: SecureAction_id
+          in: path
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: 'successful operation'
+          schema:
+            type: object
+            properties:
+              jsonapi:
+                type: object
+                properties:
+                  version:
+                    type: string
+                    example: '1.0'
+              links:
+                type: object
+                properties:
+                  self:
+                    type: string
+                    example: /secure/actions
+              data:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int64
+                    example: 12
+                  type:
+                    type: string
+                    example: secure_actions
+                  attributes:
+                    $ref: '#/definitions/SecureAction'
+                  relationships:
+                    properties: {  }
 securityDefinitions:
   api_key:
     type: apiKey
@@ -991,6 +1265,21 @@ definitions:
         minimum: 1
         description: 'User ID'
         example: 50
+  SecureAction:
+    type: object
+    properties:
+      creationDate:
+        type: string
+        format: date-time
+      expirationDate:
+        type: string
+        format: date-time
+      token:
+        type: string
+      validated:
+        type: boolean
+      action:
+        type: object
 externalDocs:
   description: 'Find out more about Swagger'
   url: 'http://swagger.io'
